# C-CMake-Enviroment

./: CMakeLists.txt  README.md
lib/linkedlist/: CMakeLists.txt
lib/linkedlist/src/: linkedlist.c
shell/: build.sh  execute.sh  test.sh
src/: main.c
